Changes since version 1.3.0
---------------------------

- Modified the Ice::Service class to support the Ice.Nohup property,
  rename the win9x function to checkSystem, and add more flexibility
  in configuring services. See the reference manual for more
  information.

- Added unsupported FreeBSD port.

- Ice now builds with GCC 3.4.0.

- Fixed a bug when making asynchronous invocations on a routed proxy.

- Removed slice2wsdl.

- Changed the way sequences are unmarshaled to protect against
  malicous messages with faked very large sequence count values.
  While even with previous versions of Ice, buffer overruns were
  impossible, malicious messages could cause large amounts of memory
  to be preallocated, causing the receiving process to run out of
  memory. This is no longer possible -- the total amount of memory
  preallocated for sequences during unmarshaling is now capped at
  Ice.MessageSizeMax.

- Freeze Evictor changes to adapt to the facet redesign, and 
  make several improvements:
  
  * The Freeze Evictor now has add, addFacet, remove and removeFacet
    operations with the same signature and behavior as the Ice
    ObjectAdapter.

  * The createObject and destroyObject operations were kept for 
    compatibility with Ice 1.2/1.3, but are now deprecated.

  * getIterator now takes a facet parameter, and no longer takes
    a loadServants parameter.

  * Indices can now be defined for facets (not just the "" facet).
 
  * The ServantInitializer initialize operation now takes a facet
    parameter. 

  * The ServantInitializer is now provided to the Evictor in the
    createEvictor call. In this way, the Evictor can consider the
    servant initializer immutable and avoid locking.

  * Servant initialization is now performed without holding any
    Evictor locks. As a result, a servant initializer can perform
    any remote call, except one that comes back to the object
    being initialized (which would result in a deadlock).
