@@ -119,7 +119,21 @@ MutexTest::run()
 	}
 	
 	Mutex::TryLock lock2(mutex);
+#ifdef __FreeBSD__
+	try
+	{
+	    test(lock.tryAcquire() == false);
+	}
+	catch(const IceUtil::ThreadSyscallException& ex)
+	{
+	    //
+	    // pthread_mutex_trylock returns EDEADLK in FreeBSD's new threading implementation.
+	    //
+	    test(ex.error() == EDEADLK);
+	}
+#else
 	test(lock.tryAcquire() == false);
+#endif
 	lock2.release();
 	test(lock.tryAcquire() == true);
 	test(lock.acquired());	
