@@ -118,7 +118,21 @@ StaticMutexTest::run()
 	}
 	
 	StaticMutex::TryLock lock2(staticMutex);
+#ifdef __FreeBSD__
+	try
+	{
+	    test(lock.tryAcquire() == false);
+	}
+	catch(const IceUtil::ThreadSyscallException& ex)
+	{
+	    //
+	    // pthread_mutex_trylock returns EDEADLK in FreeBSD's new threading implementation.
+	    //
+	    test(ex.error() == EDEADLK);
+	}
+#else
 	test(lock.tryAcquire() == false);
+#endif
 	lock2.release();
 	test(lock.tryAcquire() == true);
 	test(lock.acquired());	
